Correct the title of webpage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Fist Flex Page</title>
+    <title>First Flex Page</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
 </head>
